增加刷資料庫的地方

--- a/gantt/templates/gantt/index.html
+++ b/gantt/templates/gantt/index.html
@@ -10,3 +10,8 @@
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
+
+<div style="max-width: 2000px;margin-top: 46px;">
+{{ chart|safe }}
+</div>
+
