--- a/gantt/templates/gantt/index.html
+++ b/gantt/templates/gantt/index.html
@@ -1,17 +1,53 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'gantt/style.css' %}">
+<style>
+    #head {
+        width: 75%;
+        margin: 0 auto;
+    }
+</style>
 
-{% if latest_character_list %}
-    <ul>
-    {% for character in latest_character_list %}
-        <li><a href="{% url 'detail' character.id %}">{{ character.name }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No polls are available.</p>
-{% endif %}
 
-<div style="max-width: 2000px;margin-top: 46px;">
-{{ chart|safe }}
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+
+<div id="head" style="max-width: 500px;" style="text-align:center">
+    <table class="table" style="max-width: 2000px;">
+        <thead>
+            <tr style="text-align: center;">
+                <th scope="col">1</th>
+                <th scope="col">2</th>
+                <th scope="col">3</th>
+                <th scope="col">4</th>
+                <th scope="col">5</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td style="width:100px;"><img src="{% static 'gantt/images/伶.png' %}" alt=""
+                        style="width:100px; height:100;"></td>
+                <td style="width:100px;"><img src="{% static 'gantt/images/優衣.png' %}" alt=""
+                        style="width:100px; height:100;"></td>
+                <td style="width:100px;"><img src="{% static 'gantt/images/霞.png' %}" alt=""
+                        style="width:100px; height:100;"></td>
+                <td style="width:100px;"><img src="{% static 'gantt/images/真琴.png' %}" alt=""
+                        style="width:100px; height:100;"></td>
+                <td style="width:100px;"><img src="{% static 'gantt/images/日和.png' %}" alt=""
+                        style="width:100px; height:100;"></td>
+            </tr>
+        </tbody>
+    </table>
+
 </div>
 
+<div style="max-width: 2000px;margin-top: 46px;">
+    {{ chart|safe }}
+</div>
