--- a/gantt/templates/gantt/index.html
+++ b/gantt/templates/gantt/index.html
@@ -18,7 +18,8 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
-
+<html>
+<title>技能持續時間圖表</title>
 <div id="head" style="max-width: 500px;" style="text-align:center">
     <table class="table" style="max-width: 2000px;">
         <thead>
@@ -51,3 +52,5 @@
 <div style="max-width: 2000px;margin-top: 46px;">
     {{ chart|safe }}
 </div>
+
+</html>
