--- a/gantt/templates/gantt/index.html
+++ b/gantt/templates/gantt/index.html
@@ -7,7 +7,9 @@
 
     body {
         background-image: url("{% static 'gantt/images/bg.png' %}");
+        background-size: cover;
     }
+
 
     .text {
         font-family: fantasy;
@@ -47,7 +49,7 @@
 
     </div>
     <div align="center" style="padding:15px"><button type="submit" onclick=window.location.href="/list"
-            class="btn btn-outline-dark">重新編輯隊伍</button></div>
+            class="btn btn-outline-dark btn-lg">重新編輯隊伍</button></div>
 
     <div style=" max-width: 2000px;margin-top: 30px;">
         {{ chart|safe }}
